--- a/test_lsh_app/conf/app_config.ini
+++ b/test_lsh_app/conf/app_config.ini
@@ -7,3 +7,7 @@ host=http://qa.market.wmdev2.lsh123.com
 
 [app_headers]
 headers={'device-id': 'market'}
+
+[test_case_doc]
+loginCase=logincase.xls
+registerCase=register.xls
