--- a/test_lsh_app/conf/app_config.ini
+++ b/test_lsh_app/conf/app_config.ini
@@ -1,3 +1,17 @@
+[db_market_conf]
+db_host=192.168.60.59
+db_port=5200
+db_user='root'
+db_password=''
+db_name=lsh_market_dev
+
+[db_sales_conf]
+db_host=192.168.60.59
+db_port=5200
+db_user='root'
+db_password=''
+db_name=lsh_sales
+
 [app_user]
 username=13466640320
 password=000000
