--- a/test_lsh_app/conf/app_config.ini
+++ b/test_lsh_app/conf/app_config.ini
@@ -24,4 +24,4 @@ headers={'device-id': 'market'}
 
 [test_case_doc]
 loginCase=logincase.xls
-registerCase=register.xls
+registerCase=registercase.xls
