--- a/test_lsh_app/conf/app_config.ini
+++ b/test_lsh_app/conf/app_config.ini
@@ -13,11 +13,14 @@ db_password=''
 db_name=lsh_sales
 
 [app_user]
-username=13466640320
+username=16001341002
 password=000000
 
 [app_host]
-host=http://qa.market.wmdev2.lsh123.com
+qa_host=http://qa.market.wmdev2.lsh123.com
+qa2_host=http://qa2.market.wmdev2.lsh123.com
+qa3_host=http://qa3.market.wmdev2.lsh123.com
+
 
 [app_headers]
 headers={'device-id': 'market'}
