--- a/test_lsh_mis/conf/mis_config.ini
+++ b/test_lsh_mis/conf/mis_config.ini
@@ -3,4 +3,6 @@ email=admin@lsh123.com
 password=111111qQ
 
 [mis_host]
-host=http://qa.market-mis.wmdev2.lsh123.com
+qa_host=http://qa.market-mis.wmdev2.lsh123.com
+qa2_host=http://qa2.market-mis.wmdev2.lsh123.com
+qa3_host=http://qa3.market-mis.wmdev2.lsh123.com
